HelloUltraviolet/Fixtures/RejectedSource/Statements/ReturnAtModuleScope/Source/Main.uv
//! Rejected statement specimen for return at module scope.

return 1
